phaseCdim/syntax.output
Nonterminals useless in grammar

    whilestart
    $@9
    whilecond
    $@10


Terminals unused in grammar

    "_"
    "comment"
    "multiline comment"
    "nested comment"


Rules useless in grammar

   94 $@9: %empty

   95 whilestart: "while" $@9

   96 $@10: %empty

   97 whilecond: LEFT_PARENTHESIS expr RIGHT_PARENTHESIS stmt $@10


State 148 conflicts: 1 shift/reduce


Grammar

    0 $accept: program "end of file"

    1 program: statements

    2 statements: statements stmt
    3           | %empty

    4 stmt: expr ";"
    5     | ifstmt
    6     | whilestmt
    7     | forstmt
    8     | returnstmt
    9     | "break" ";"
   10     | "continue" ";"
   11     | block
   12     | funcdef
   13     | ";"

   14 expr: assignexpr
   15     | expr ADD expr
   16     | expr SUB expr
   17     | expr MUL expr
   18     | expr DIV expr
   19     | expr MOD expr
   20     | expr EQ expr
   21     | expr DIF expr
   22     | expr AND expr
   23     | expr OR expr
   24     | expr GREQ expr
   25     | expr LESS expr
   26     | expr LESSEQ expr
   27     | expr GR expr
   28     | term

   29 term: LEFT_PARENTHESIS expr RIGHT_PARENTHESIS
   30     | SUB expr
   31     | NOTOP expr
   32     | INC lvalue
   33     | lvalue INC
   34     | DEC lvalue
   35     | lvalue DEC
   36     | primary

   37 assignexpr: lvalue ASSIGNMENT expr

   38 primary: lvalue
   39        | call
   40        | objectdef
   41        | LEFT_PARENTHESIS funcdef RIGHT_PARENTHESIS
   42        | const

   43 lvalue: ID
   44       | "local" ID
   45       | "::" ID
   46       | member

   47 member: lvalue "." ID
   48       | lvalue "LEFT_BRACKET" expr "RIGHT_BRACKET"
   49       | call "." ID
   50       | call "LEFT_BRACKET" expr "RIGHT_BRACKET"

   51 call: call LEFT_PARENTHESIS elist RIGHT_PARENTHESIS
   52     | lvalue callsuffix
   53     | LEFT_PARENTHESIS funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

   54 callsuffix: normcall
   55           | methodcall

   56 normcall: LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

   57 methodcall: ".." ID LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

   58 elists: "," expr elists
   59       | %empty

   60 elist: expr elists
   61      | %empty

   62 objectdef: "LEFT_BRACKET" elist "RIGHT_BRACKET"
   63          | "LEFT_BRACKET" indexed "RIGHT_BRACKET"

   64 indexeds: indexeds "," indexedelem
   65         | %empty

   66 indexed: indexedelem indexeds

   67 indexedelem: "{" expr ":" expr "}"

   68 $@1: %empty

   69 block: "{" $@1 statements "}"

   70 $@2: %empty

   71 $@3: %empty

   72 $@4: %empty

   73 funcdef: "function" ID $@2 LEFT_PARENTHESIS $@3 idlist RIGHT_PARENTHESIS $@4 block

   74 $@5: %empty

   75 $@6: %empty

   76 $@7: %empty

   77 funcdef: "function" $@5 LEFT_PARENTHESIS $@6 idlist RIGHT_PARENTHESIS $@7 block

   78 const: NUMBER
   79      | "string"
   80      | "nil"
   81      | "true"
   82      | "false"

   83 idlists: idlists "," ID
   84        | %empty

   85 $@8: %empty

   86 idlist: ID $@8 idlists
   87       | %empty

   88 ifstmt: IF LEFT_PARENTHESIS expr RIGHT_PARENTHESIS stmt
   89       | IF LEFT_PARENTHESIS expr RIGHT_PARENTHESIS stmt "else" stmt

   90 whilestmt: "while" LEFT_PARENTHESIS expr RIGHT_PARENTHESIS

   91 forstmt: "for" LEFT_PARENTHESIS elist ";" expr ";" elist RIGHT_PARENTHESIS stmt

   92 returnstmt: "return" ";"
   93           | "return" expr ";"


Terminals, with rules where they appear

    "end of file" <strval> (0) 0
    error (256)
    NUMBER <realValue> (258) 78
    IF (259) 88 89
    "else" (260) 89
    "while" (261) 90
    "for" (262) 91
    "function" (263) 73 77
    "return" (264) 92 93
    "break" (265) 9
    "continue" (266) 10
    "local" (267) 44
    "true" (268) 81
    "false" (269) 82
    "nil" (270) 80
    ASSIGNMENT (271) 37
    OR (272) 23
    AND (273) 22
    NOTOP (274) 31
    ADD (275) 15
    UMINUS (276)
    SUB (277) 16 30
    MUL (278) 17
    DIV (279) 18
    MOD (280) 19
    EQ (281) 20
    DIF (282) 21
    INC (283) 32 33
    DEC (284) 34 35
    GR (285) 27
    GREQ (286) 24
    LESS (287) 25
    LESSEQ (288) 26
    "{" (289) 67 69
    "}" (290) 67 69
    "LEFT_BRACKET" (291) 48 50 62 63
    "RIGHT_BRACKET" (292) 48 50 62 63
    RIGHT_PARENTHESIS (293) 29 41 51 53 56 57 73 77 88 89 90 91
    LEFT_PARENTHESIS (294) 29 41 51 53 56 57 73 77 88 89 90 91
    ";" (295) 4 9 10 13 91 92 93
    "," (296) 58 64 83
    ":" (297) 67
    "::" (298) 45
    "." (299) 47 49
    ".." (300) 57
    "_" (301)
    "string" <strval> (302) 79
    "comment" <strval> (303)
    ID <strval> (304) 43 44 45 47 49 57 73 83 86
    "multiline comment" <strval> (305)
    "nested comment" <strval> (306)


Nonterminals, with rules where they appear

    $accept (52)
        on left: 0
    program (53)
        on left: 1
        on right: 0
    statements (54)
        on left: 2 3
        on right: 1 2 69
    stmt <strval> (55)
        on left: 4 5 6 7 8 9 10 11 12 13
        on right: 2 88 89 91
    expr <exprvalue> (56)
        on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28
        on right: 4 15 16 17 18 19 20 21 22 23 24 25 26 27 29 30 31 37 48 50 58 60 67 88 89 90 91 93
    term <exprvalue> (57)
        on left: 29 30 31 32 33 34 35 36
        on right: 28
    assignexpr <exprvalue> (58)
        on left: 37
        on right: 14
    primary <exprvalue> (59)
        on left: 38 39 40 41 42
        on right: 36
    lvalue <exprvalue> (60)
        on left: 43 44 45 46
        on right: 32 33 34 35 37 38 47 48 52
    member <exprvalue> (61)
        on left: 47 48 49 50
        on right: 46
    call <exprvalue> (62)
        on left: 51 52 53
        on right: 39 49 50 51
    callsuffix <callvalue> (63)
        on left: 54 55
        on right: 52
    normcall <callvalue> (64)
        on left: 56
        on right: 54
    methodcall <callvalue> (65)
        on left: 57
        on right: 55
    elists (66)
        on left: 58 59
        on right: 58 60
    elist <exprvalue> (67)
        on left: 60 61
        on right: 51 53 56 57 62 91
    objectdef <exprvalue> (68)
        on left: 62 63
        on right: 40
    indexeds (69)
        on left: 64 65
        on right: 64 66
    indexed <exprvalue> (70)
        on left: 66
        on right: 63
    indexedelem <exprvalue> (71)
        on left: 67
        on right: 64 66
    block (72)
        on left: 69
        on right: 11 73 77
    $@1 (73)
        on left: 68
        on right: 69
    funcdef (74)
        on left: 73 77
        on right: 12 41 53
    $@2 (75)
        on left: 70
        on right: 73
    $@3 (76)
        on left: 71
        on right: 73
    $@4 (77)
        on left: 72
        on right: 73
    $@5 (78)
        on left: 74
        on right: 77
    $@6 (79)
        on left: 75
        on right: 77
    $@7 (80)
        on left: 76
        on right: 77
    const <exprvalue> (81)
        on left: 78 79 80 81 82
        on right: 42
    idlists (82)
        on left: 83 84
        on right: 83 86
    idlist (83)
        on left: 86 87
        on right: 73 77
    $@8 (84)
        on left: 85
        on right: 86
    ifstmt (85)
        on left: 88 89
        on right: 5
    whilestmt (86)
        on left: 90
        on right: 6
    forstmt (87)
        on left: 91
        on right: 7
    returnstmt (88)
        on left: 92 93
        on right: 8


State 0

    0 $accept: . program "end of file"

    $default  reduce using rule 3 (statements)

    program     go to state 1
    statements  go to state 2


State 1

    0 $accept: program . "end of file"

    "end of file"  shift, and go to state 3


State 2

    1 program: statements .
    2 statements: statements . stmt

    NUMBER            shift, and go to state 4
    IF                shift, and go to state 5
    "while"           shift, and go to state 6
    "for"             shift, and go to state 7
    "function"        shift, and go to state 8
    "return"          shift, and go to state 9
    "break"           shift, and go to state 10
    "continue"        shift, and go to state 11
    "local"           shift, and go to state 12
    "true"            shift, and go to state 13
    "false"           shift, and go to state 14
    "nil"             shift, and go to state 15
    NOTOP             shift, and go to state 16
    SUB               shift, and go to state 17
    INC               shift, and go to state 18
    DEC               shift, and go to state 19
    "{"               shift, and go to state 20
    "LEFT_BRACKET"    shift, and go to state 21
    LEFT_PARENTHESIS  shift, and go to state 22
    ";"               shift, and go to state 23
    "::"              shift, and go to state 24
    "string"          shift, and go to state 25
    ID                shift, and go to state 26

    $default  reduce using rule 1 (program)

    stmt        go to state 27
    expr        go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcdef     go to state 37
    const       go to state 38
    ifstmt      go to state 39
    whilestmt   go to state 40
    forstmt     go to state 41
    returnstmt  go to state 42


State 3

    0 $accept: program "end of file" .

    $default  accept


State 4

   78 const: NUMBER .

    $default  reduce using rule 78 (const)


State 5

   88 ifstmt: IF . LEFT_PARENTHESIS expr RIGHT_PARENTHESIS stmt
   89       | IF . LEFT_PARENTHESIS expr RIGHT_PARENTHESIS stmt "else" stmt

    LEFT_PARENTHESIS  shift, and go to state 43


State 6

   90 whilestmt: "while" . LEFT_PARENTHESIS expr RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  shift, and go to state 44


State 7

   91 forstmt: "for" . LEFT_PARENTHESIS elist ";" expr ";" elist RIGHT_PARENTHESIS stmt

    LEFT_PARENTHESIS  shift, and go to state 45


State 8

   73 funcdef: "function" . ID $@2 LEFT_PARENTHESIS $@3 idlist RIGHT_PARENTHESIS $@4 block
   77        | "function" . $@5 LEFT_PARENTHESIS $@6 idlist RIGHT_PARENTHESIS $@7 block

    ID  shift, and go to state 46

    $default  reduce using rule 74 ($@5)

    $@5  go to state 47


State 9

   92 returnstmt: "return" . ";"
   93           | "return" . expr ";"

    NUMBER            shift, and go to state 4
    "local"           shift, and go to state 12
    "true"            shift, and go to state 13
    "false"           shift, and go to state 14
    "nil"             shift, and go to state 15
    NOTOP             shift, and go to state 16
    SUB               shift, and go to state 17
    INC               shift, and go to state 18
    DEC               shift, and go to state 19
    "LEFT_BRACKET"    shift, and go to state 21
    LEFT_PARENTHESIS  shift, and go to state 22
    ";"               shift, and go to state 48
    "::"              shift, and go to state 24
    "string"          shift, and go to state 25
    ID                shift, and go to state 26

    expr        go to state 49
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 10

    9 stmt: "break" . ";"

    ";"  shift, and go to state 50


State 11

   10 stmt: "continue" . ";"

    ";"  shift, and go to state 51


State 12

   44 lvalue: "local" . ID

    ID  shift, and go to state 52


State 13

   81 const: "true" .

    $default  reduce using rule 81 (const)


State 14

   82 const: "false" .

    $default  reduce using rule 82 (const)


State 15

   80 const: "nil" .

    $default  reduce using rule 80 (const)


State 16

   31 term: NOTOP . expr

    NUMBER            shift, and go to state 4
    "local"           shift, and go to state 12
    "true"            shift, and go to state 13
    "false"           shift, and go to state 14
    "nil"             shift, and go to state 15
    NOTOP             shift, and go to state 16
    SUB               shift, and go to state 17
    INC               shift, and go to state 18
    DEC               shift, and go to state 19
    "LEFT_BRACKET"    shift, and go to state 21
    LEFT_PARENTHESIS  shift, and go to state 22
    "::"              shift, and go to state 24
    "string"          shift, and go to state 25
    ID                shift, and go to state 26

    expr        go to state 53
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 17

   30 term: SUB . expr

    NUMBER            shift, and go to state 4
    "local"           shift, and go to state 12
    "true"            shift, and go to state 13
    "false"           shift, and go to state 14
    "nil"             shift, and go to state 15
    NOTOP             shift, and go to state 16
    SUB               shift, and go to state 17
    INC               shift, and go to state 18
    DEC               shift, and go to state 19
    "LEFT_BRACKET"    shift, and go to state 21
    LEFT_PARENTHESIS  shift, and go to state 22
    "::"              shift, and go to state 24
    "string"          shift, and go to state 25
    ID                shift, and go to state 26

    expr        go to state 54
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 18

   32 term: INC . lvalue

    "local"           shift, and go to state 12
    LEFT_PARENTHESIS  shift, and go to state 55
    "::"              shift, and go to state 24
    ID                shift, and go to state 26

    lvalue  go to state 56
    member  go to state 33
    call    go to state 57


State 19

   34 term: DEC . lvalue

    "local"           shift, and go to state 12
    LEFT_PARENTHESIS  shift, and go to state 55
    "::"              shift, and go to state 24
    ID                shift, and go to state 26

    lvalue  go to state 58
    member  go to state 33
    call    go to state 57


State 20

   69 block: "{" . $@1 statements "}"

    $default  reduce using rule 68 ($@1)

    $@1  go to state 59


State 21

   62 objectdef: "LEFT_BRACKET" . elist "RIGHT_BRACKET"
   63          | "LEFT_BRACKET" . indexed "RIGHT_BRACKET"

    NUMBER            shift, and go to state 4
    "local"           shift, and go to state 12
    "true"            shift, and go to state 13
    "false"           shift, and go to state 14
    "nil"             shift, and go to state 15
    NOTOP             shift, and go to state 16
    SUB               shift, and go to state 17
    INC               shift, and go to state 18
    DEC               shift, and go to state 19
    "{"               shift, and go to state 60
    "LEFT_BRACKET"    shift, and go to state 21
    LEFT_PARENTHESIS  shift, and go to state 22
    "::"              shift, and go to state 24
    "string"          shift, and go to state 25
    ID                shift, and go to state 26

    $default  reduce using rule 61 (elist)

    expr         go to state 61
    term         go to state 29
    assignexpr   go to state 30
    primary      go to state 31
    lvalue       go to state 32
    member       go to state 33
    call         go to state 34
    elist        go to state 62
    objectdef    go to state 35
    indexed      go to state 63
    indexedelem  go to state 64
    const        go to state 38


State 22

   29 term: LEFT_PARENTHESIS . expr RIGHT_PARENTHESIS
   41 primary: LEFT_PARENTHESIS . funcdef RIGHT_PARENTHESIS
   53 call: LEFT_PARENTHESIS . funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    NUMBER            shift, and go to state 4
    "function"        shift, and go to state 8
    "local"           shift, and go to state 12
    "true"            shift, and go to state 13
    "false"           shift, and go to state 14
    "nil"             shift, and go to state 15
    NOTOP             shift, and go to state 16
    SUB               shift, and go to state 17
    INC               shift, and go to state 18
    DEC               shift, and go to state 19
    "LEFT_BRACKET"    shift, and go to state 21
    LEFT_PARENTHESIS  shift, and go to state 22
    "::"              shift, and go to state 24
    "string"          shift, and go to state 25
    ID                shift, and go to state 26

    expr        go to state 65
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    funcdef     go to state 66
    const       go to state 38


State 23

   13 stmt: ";" .

    $default  reduce using rule 13 (stmt)


State 24

   45 lvalue: "::" . ID

    ID  shift, and go to state 67


State 25

   79 const: "string" .

    $default  reduce using rule 79 (const)


State 26

   43 lvalue: ID .

    $default  reduce using rule 43 (lvalue)


State 27

    2 statements: statements stmt .

    $default  reduce using rule 2 (statements)


State 28

    4 stmt: expr . ";"
   15 expr: expr . ADD expr
   16     | expr . SUB expr
   17     | expr . MUL expr
   18     | expr . DIV expr
   19     | expr . MOD expr
   20     | expr . EQ expr
   21     | expr . DIF expr
   22     | expr . AND expr
   23     | expr . OR expr
   24     | expr . GREQ expr
   25     | expr . LESS expr
   26     | expr . LESSEQ expr
   27     | expr . GR expr

    OR      shift, and go to state 68
    AND     shift, and go to state 69
    ADD     shift, and go to state 70
    SUB     shift, and go to state 71
    MUL     shift, and go to state 72
    DIV     shift, and go to state 73
    MOD     shift, and go to state 74
    EQ      shift, and go to state 75
    DIF     shift, and go to state 76
    GR      shift, and go to state 77
    GREQ    shift, and go to state 78
    LESS    shift, and go to state 79
    LESSEQ  shift, and go to state 80
    ";"     shift, and go to state 81


State 29

   28 expr: term .

    $default  reduce using rule 28 (expr)


State 30

   14 expr: assignexpr .

    $default  reduce using rule 14 (expr)


State 31

   36 term: primary .

    $default  reduce using rule 36 (term)


State 32

   33 term: lvalue . INC
   35     | lvalue . DEC
   37 assignexpr: lvalue . ASSIGNMENT expr
   38 primary: lvalue .
   47 member: lvalue . "." ID
   48       | lvalue . "LEFT_BRACKET" expr "RIGHT_BRACKET"
   52 call: lvalue . callsuffix

    ASSIGNMENT        shift, and go to state 82
    INC               shift, and go to state 83
    DEC               shift, and go to state 84
    "LEFT_BRACKET"    shift, and go to state 85
    LEFT_PARENTHESIS  shift, and go to state 86
    "."               shift, and go to state 87
    ".."              shift, and go to state 88

    $default  reduce using rule 38 (primary)

    callsuffix  go to state 89
    normcall    go to state 90
    methodcall  go to state 91


State 33

   46 lvalue: member .

    $default  reduce using rule 46 (lvalue)


State 34

   39 primary: call .
   49 member: call . "." ID
   50       | call . "LEFT_BRACKET" expr "RIGHT_BRACKET"
   51 call: call . LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    "LEFT_BRACKET"    shift, and go to state 92
    LEFT_PARENTHESIS  shift, and go to state 93
    "."               shift, and go to state 94

    $default  reduce using rule 39 (primary)


State 35

   40 primary: objectdef .

    $default  reduce using rule 40 (primary)


State 36

   11 stmt: block .

    $default  reduce using rule 11 (stmt)


State 37

   12 stmt: funcdef .

    $default  reduce using rule 12 (stmt)


State 38

   42 primary: const .

    $default  reduce using rule 42 (primary)


State 39

    5 stmt: ifstmt .

    $default  reduce using rule 5 (stmt)


State 40

    6 stmt: whilestmt .

    $default  reduce using rule 6 (stmt)


State 41

    7 stmt: forstmt .

    $default  reduce using rule 7 (stmt)


State 42

    8 stmt: returnstmt .

    $default  reduce using rule 8 (stmt)


State 43

   88 ifstmt: IF LEFT_PARENTHESIS . expr RIGHT_PARENTHESIS stmt
   89       | IF LEFT_PARENTHESIS . expr RIGHT_PARENTHESIS stmt "else" stmt

    NUMBER            shift, and go to state 4
    "local"           shift, and go to state 12
    "true"            shift, and go to state 13
    "false"           shift, and go to state 14
    "nil"             shift, and go to state 15
    NOTOP             shift, and go to state 16
    SUB               shift, and go to state 17
    INC               shift, and go to state 18
    DEC               shift, and go to state 19
    "LEFT_BRACKET"    shift, and go to state 21
    LEFT_PARENTHESIS  shift, and go to state 22
    "::"              shift, and go to state 24
    "string"          shift, and go to state 25
    ID                shift, and go to state 26

    expr        go to state 95
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 44

   90 whilestmt: "while" LEFT_PARENTHESIS . expr RIGHT_PARENTHESIS

    NUMBER            shift, and go to state 4
    "local"           shift, and go to state 12
    "true"            shift, and go to state 13
    "false"           shift, and go to state 14
    "nil"             shift, and go to state 15
    NOTOP             shift, and go to state 16
    SUB               shift, and go to state 17
    INC               shift, and go to state 18
    DEC               shift, and go to state 19
    "LEFT_BRACKET"    shift, and go to state 21
    LEFT_PARENTHESIS  shift, and go to state 22
    "::"              shift, and go to state 24
    "string"          shift, and go to state 25
    ID                shift, and go to state 26

    expr        go to state 96
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 45

   91 forstmt: "for" LEFT_PARENTHESIS . elist ";" expr ";" elist RIGHT_PARENTHESIS stmt

    NUMBER            shift, and go to state 4
    "local"           shift, and go to state 12
    "true"            shift, and go to state 13
    "false"           shift, and go to state 14
    "nil"             shift, and go to state 15
    NOTOP             shift, and go to state 16
    SUB               shift, and go to state 17
    INC               shift, and go to state 18
    DEC               shift, and go to state 19
    "LEFT_BRACKET"    shift, and go to state 21
    LEFT_PARENTHESIS  shift, and go to state 22
    "::"              shift, and go to state 24
    "string"          shift, and go to state 25
    ID                shift, and go to state 26

    $default  reduce using rule 61 (elist)

    expr        go to state 61
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    elist       go to state 97
    objectdef   go to state 35
    const       go to state 38


State 46

   73 funcdef: "function" ID . $@2 LEFT_PARENTHESIS $@3 idlist RIGHT_PARENTHESIS $@4 block

    $default  reduce using rule 70 ($@2)

    $@2  go to state 98


State 47

   77 funcdef: "function" $@5 . LEFT_PARENTHESIS $@6 idlist RIGHT_PARENTHESIS $@7 block

    LEFT_PARENTHESIS  shift, and go to state 99


State 48

   92 returnstmt: "return" ";" .

    $default  reduce using rule 92 (returnstmt)


State 49

   15 expr: expr . ADD expr
   16     | expr . SUB expr
   17     | expr . MUL expr
   18     | expr . DIV expr
   19     | expr . MOD expr
   20     | expr . EQ expr
   21     | expr . DIF expr
   22     | expr . AND expr
   23     | expr . OR expr
   24     | expr . GREQ expr
   25     | expr . LESS expr
   26     | expr . LESSEQ expr
   27     | expr . GR expr
   93 returnstmt: "return" expr . ";"

    OR      shift, and go to state 68
    AND     shift, and go to state 69
    ADD     shift, and go to state 70
    SUB     shift, and go to state 71
    MUL     shift, and go to state 72
    DIV     shift, and go to state 73
    MOD     shift, and go to state 74
    EQ      shift, and go to state 75
    DIF     shift, and go to state 76
    GR      shift, and go to state 77
    GREQ    shift, and go to state 78
    LESS    shift, and go to state 79
    LESSEQ  shift, and go to state 80
    ";"     shift, and go to state 100


State 50

    9 stmt: "break" ";" .

    $default  reduce using rule 9 (stmt)


State 51

   10 stmt: "continue" ";" .

    $default  reduce using rule 10 (stmt)


State 52

   44 lvalue: "local" ID .

    $default  reduce using rule 44 (lvalue)


State 53

   15 expr: expr . ADD expr
   16     | expr . SUB expr
   17     | expr . MUL expr
   18     | expr . DIV expr
   19     | expr . MOD expr
   20     | expr . EQ expr
   21     | expr . DIF expr
   22     | expr . AND expr
   23     | expr . OR expr
   24     | expr . GREQ expr
   25     | expr . LESS expr
   26     | expr . LESSEQ expr
   27     | expr . GR expr
   31 term: NOTOP expr .

    $default  reduce using rule 31 (term)


State 54

   15 expr: expr . ADD expr
   16     | expr . SUB expr
   17     | expr . MUL expr
   18     | expr . DIV expr
   19     | expr . MOD expr
   20     | expr . EQ expr
   21     | expr . DIF expr
   22     | expr . AND expr
   23     | expr . OR expr
   24     | expr . GREQ expr
   25     | expr . LESS expr
   26     | expr . LESSEQ expr
   27     | expr . GR expr
   30 term: SUB expr .

    $default  reduce using rule 30 (term)


State 55

   53 call: LEFT_PARENTHESIS . funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    "function"  shift, and go to state 8

    funcdef  go to state 101


State 56

   32 term: INC lvalue .
   47 member: lvalue . "." ID
   48       | lvalue . "LEFT_BRACKET" expr "RIGHT_BRACKET"
   52 call: lvalue . callsuffix

    "LEFT_BRACKET"    shift, and go to state 85
    LEFT_PARENTHESIS  shift, and go to state 86
    "."               shift, and go to state 87
    ".."              shift, and go to state 88

    $default  reduce using rule 32 (term)

    callsuffix  go to state 89
    normcall    go to state 90
    methodcall  go to state 91


State 57

   49 member: call . "." ID
   50       | call . "LEFT_BRACKET" expr "RIGHT_BRACKET"
   51 call: call . LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    "LEFT_BRACKET"    shift, and go to state 92
    LEFT_PARENTHESIS  shift, and go to state 93
    "."               shift, and go to state 94


State 58

   34 term: DEC lvalue .
   47 member: lvalue . "." ID
   48       | lvalue . "LEFT_BRACKET" expr "RIGHT_BRACKET"
   52 call: lvalue . callsuffix

    "LEFT_BRACKET"    shift, and go to state 85
    LEFT_PARENTHESIS  shift, and go to state 86
    "."               shift, and go to state 87
    ".."              shift, and go to state 88

    $default  reduce using rule 34 (term)

    callsuffix  go to state 89
    normcall    go to state 90
    methodcall  go to state 91


State 59

   69 block: "{" $@1 . statements "}"

    $default  reduce using rule 3 (statements)

    statements  go to state 102


State 60

   67 indexedelem: "{" . expr ":" expr "}"

    NUMBER            shift, and go to state 4
    "local"           shift, and go to state 12
    "true"            shift, and go to state 13
    "false"           shift, and go to state 14
    "nil"             shift, and go to state 15
    NOTOP             shift, and go to state 16
    SUB               shift, and go to state 17
    INC               shift, and go to state 18
    DEC               shift, and go to state 19
    "LEFT_BRACKET"    shift, and go to state 21
    LEFT_PARENTHESIS  shift, and go to state 22
    "::"              shift, and go to state 24
    "string"          shift, and go to state 25
    ID                shift, and go to state 26

    expr        go to state 103
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 61

   15 expr: expr . ADD expr
   16     | expr . SUB expr
   17     | expr . MUL expr
   18     | expr . DIV expr
   19     | expr . MOD expr
   20     | expr . EQ expr
   21     | expr . DIF expr
   22     | expr . AND expr
   23     | expr . OR expr
   24     | expr . GREQ expr
   25     | expr . LESS expr
   26     | expr . LESSEQ expr
   27     | expr . GR expr
   60 elist: expr . elists

    OR      shift, and go to state 68
    AND     shift, and go to state 69
    ADD     shift, and go to state 70
    SUB     shift, and go to state 71
    MUL     shift, and go to state 72
    DIV     shift, and go to state 73
    MOD     shift, and go to state 74
    EQ      shift, and go to state 75
    DIF     shift, and go to state 76
    GR      shift, and go to state 77
    GREQ    shift, and go to state 78
    LESS    shift, and go to state 79
    LESSEQ  shift, and go to state 80
    ","     shift, and go to state 104

    $default  reduce using rule 59 (elists)

    elists  go to state 105


State 62

   62 objectdef: "LEFT_BRACKET" elist . "RIGHT_BRACKET"

    "RIGHT_BRACKET"  shift, and go to state 106


State 63

   63 objectdef: "LEFT_BRACKET" indexed . "RIGHT_BRACKET"

    "RIGHT_BRACKET"  shift, and go to state 107


State 64

   66 indexed: indexedelem . indexeds

    $default  reduce using rule 65 (indexeds)

    indexeds  go to state 108


State 65

   15 expr: expr . ADD expr
   16     | expr . SUB expr
   17     | expr . MUL expr
   18     | expr . DIV expr
   19     | expr . MOD expr
   20     | expr . EQ expr
   21     | expr . DIF expr
   22     | expr . AND expr
   23     | expr . OR expr
   24     | expr . GREQ expr
   25     | expr . LESS expr
   26     | expr . LESSEQ expr
   27     | expr . GR expr
   29 term: LEFT_PARENTHESIS expr . RIGHT_PARENTHESIS

    OR                 shift, and go to state 68
    AND                shift, and go to state 69
    ADD                shift, and go to state 70
    SUB                shift, and go to state 71
    MUL                shift, and go to state 72
    DIV                shift, and go to state 73
    MOD                shift, and go to state 74
    EQ                 shift, and go to state 75
    DIF                shift, and go to state 76
    GR                 shift, and go to state 77
    GREQ               shift, and go to state 78
    LESS               shift, and go to state 79
    LESSEQ             shift, and go to state 80
    RIGHT_PARENTHESIS  shift, and go to state 109


State 66

   41 primary: LEFT_PARENTHESIS funcdef . RIGHT_PARENTHESIS
   53 call: LEFT_PARENTHESIS funcdef . RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    RIGHT_PARENTHESIS  shift, and go to state 110


State 67

   45 lvalue: "::" ID .

    $default  reduce using rule 45 (lvalue)


State 68

   23 expr: expr OR . expr

    NUMBER            shift, and go to state 4
    "local"           shift, and go to state 12
    "true"            shift, and go to state 13
    "false"           shift, and go to state 14
    "nil"             shift, and go to state 15
    NOTOP             shift, and go to state 16
    SUB               shift, and go to state 17
    INC               shift, and go to state 18
    DEC               shift, and go to state 19
    "LEFT_BRACKET"    shift, and go to state 21
    LEFT_PARENTHESIS  shift, and go to state 22
    "::"              shift, and go to state 24
    "string"          shift, and go to state 25
    ID                shift, and go to state 26

    expr        go to state 111
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 69

   22 expr: expr AND . expr

    NUMBER            shift, and go to state 4
    "local"           shift, and go to state 12
    "true"            shift, and go to state 13
    "false"           shift, and go to state 14
    "nil"             shift, and go to state 15
    NOTOP             shift, and go to state 16
    SUB               shift, and go to state 17
    INC               shift, and go to state 18
    DEC               shift, and go to state 19
    "LEFT_BRACKET"    shift, and go to state 21
    LEFT_PARENTHESIS  shift, and go to state 22
    "::"              shift, and go to state 24
    "string"          shift, and go to state 25
    ID                shift, and go to state 26

    expr        go to state 112
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 70

   15 expr: expr ADD . expr

    NUMBER            shift, and go to state 4
    "local"           shift, and go to state 12
    "true"            shift, and go to state 13
    "false"           shift, and go to state 14
    "nil"             shift, and go to state 15
    NOTOP             shift, and go to state 16
    SUB               shift, and go to state 17
    INC               shift, and go to state 18
    DEC               shift, and go to state 19
    "LEFT_BRACKET"    shift, and go to state 21
    LEFT_PARENTHESIS  shift, and go to state 22
    "::"              shift, and go to state 24
    "string"          shift, and go to state 25
    ID                shift, and go to state 26

    expr        go to state 113
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 71

   16 expr: expr SUB . expr

    NUMBER            shift, and go to state 4
    "local"           shift, and go to state 12
    "true"            shift, and go to state 13
    "false"           shift, and go to state 14
    "nil"             shift, and go to state 15
    NOTOP             shift, and go to state 16
    SUB               shift, and go to state 17
    INC               shift, and go to state 18
    DEC               shift, and go to state 19
    "LEFT_BRACKET"    shift, and go to state 21
    LEFT_PARENTHESIS  shift, and go to state 22
    "::"              shift, and go to state 24
    "string"          shift, and go to state 25
    ID                shift, and go to state 26
